--- a/test2/kadai2.html
+++ b/test2/kadai2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<title>タイトルを修正しました。</title>
 <meta charset="utf-8">
 <meta name="description" content="">
 <link rel="stylesheet" type="text/css" href="reset.css">
